[package]
name            = "punkt_n"
version         = "1.0.5"
authors         = ["Ferris Tseng <ferristseng@fastmail.fm>", "Asher S. <github@asher.mozmail.com>"]
keywords        = ["punkt", "sentence", "token", "tokenizer"]
license         = "MIT/Apache-2.0"
repository      = "https://github.com/praise2112/rust-punkt"
description     = "An implementation of a Punkt sentence tokenizer"
readme          = "README.md"

[dependencies]
num             = "0.4"
phf             = { version = "0.11", features = ["macros"] }
rustc-serialize = "0.3"
rust-freqdist   = "0.1"

[dev-dependencies]
walkdir         = "2.5"
